[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Interactables/Assets/CollectoFruit.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Interactables/CollectoFruit.gd" type="Script" id=2]
[ext_resource path="res://Assets/Interactables/Sounds/Checkpoint.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Float_Idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollectoFruitSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollectoFruitSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.6, 3.6 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Touched"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("CollectoFruitSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 0.517632, 2.92819, 0.0473665 ),
"update": 0,
"values": [ Vector2( 3.6, 3.6 ), Vector2( 4.4, 4.4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Triggered"

[sub_resource type="CircleShape2D" id=1]
radius = 298.429

[node name="CollectoFruit" type="Position2D"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollectoFruitAnim" type="AnimationPlayer" parent="."]
anims/Float_Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Touched = SubResource( 5 )
anims/Triggered = SubResource( 4 )

[node name="CollectoFruitSprite" type="Sprite" parent="."]
scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 1 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 1 )

[node name="TriggerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
